tests/ui/impl-trait/issue-103181-1.next.stderr
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
error[E0046]: not all trait items implemented, missing: `Error`
  --> $DIR/issue-103181-1.rs:11:5
   |
LL |         type Error;
   |         ---------- `Error` from trait
LL |     }
LL |     impl HttpBody for () {
   |     ^^^^^^^^^^^^^^^^^^^^ missing `Error` in implementation

WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
WARN rustc_infer::infer::relate::generalize may incompletely handle alias type: Alias(Projection, AliasTy { args: [!0, &RePlaceholder(!1_BoundRegion { var: 0, kind: BrNamed(DefId(0:34 ~ issue_103181_1[ac79]::hyper::{impl#2}::'a), 'a) }) ()], def_id: DefId(0:47 ~ issue_103181_1[ac79]::hyper::Service::Response) })
error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
